# handpicked

./: .gitignore  Cargo.toml  flake.nix  index.html  tailwind.config.js
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: jxysri9mp5yz848nnshr5gb8cqq0x70h-source  qxdgnw54kcdvsb5jq3ck8dady53zzbyf-source  srlvh0026md5hwvmgj7g56rfh463pxv5-source
.github/workflows/: deploy_via_nix_to_page.yml
src/: lib.rs  main.rs  notices.rs
