[package]
name = "handpicked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
leptos-use = "0.10.10"
log = "0.4.21"
random_color = "0.8.0"
